--- a/petclinic/phpadmin.yaml
+++ b/petclinic/phpadmin.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: phpmyadmin
     spec:
+      securityContext:
+        runAsUser: 0
       containers:
         - name: phpmyadmin
           image: dockerpull.org/phpmyadmin:latest
