--- a/coolstore/dbvm/catalogdbvm.yaml
+++ b/coolstore/dbvm/catalogdbvm.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalog-db
+  name: catalog-database
 spec:
   selector:
     app/name: catalog-db  # Service 选择器，与 Pod 的标签匹配
@@ -108,7 +108,7 @@ spec:
                 - postgresql-setup --initdb --unit postgresql
                 - systemctl start postgresql
                 - systemctl enable postgresql
-                - sudo -u postgres psql -c "CREATE USER catalog WITH PASSWORD 'catalog';"
+                - sudo -u postgres psql -c "CREATE USER catalog WITH PASSWORD 'openshift4!';"
                 - sudo -u postgres psql -c "CREATE DATABASE catalog OWNER catalog;"
               ssh_pwauth: true
               chpasswd:
