--- a/coolstore/dbvm/inventorydb.yaml
+++ b/coolstore/dbvm/inventorydb.yaml
@@ -110,6 +110,9 @@ spec:
                 - systemctl enable postgresql
                 - sudo -u postgres psql -c "CREATE USER inventory WITH PASSWORD 'openshift4!';"
                 - sudo -u postgres psql -c "CREATE DATABASE inventory OWNER inventory;"
+                - echo 'host all all 0.0.0.0/0 md5' >> /var/lib/pgsql/data/pg_hba.conf
+                - echo "listen_addresses = '*'" >> /var/lib/pgsql/data/postgresql.conf
+                - systemctl restart postgresql
               ssh_pwauth: true
               chpasswd:
               user: root
