--- a/coolstore/dbvm/catalogdbvm.yaml
+++ b/coolstore/dbvm/catalogdbvm.yaml
@@ -96,7 +96,8 @@ spec:
             userData: |-
               #cloud-config
               packages:
-                - mariadb-server
+                - postgresql-server
+                - postgresql-contrib
               runcmd:
                 - setenforce 0
                 - systemctl stop firewalld
@@ -104,7 +105,6 @@ spec:
                 - mkdir -p /var/lib/pgsql/
                 - mount /dev/vdc /var/lib/pgsql/
                 - chown -R postgres:postgres /var/lib/pgsql/
-                - dnf -y install postgresql-server postgresql-contrib
                 - postgresql-setup --initdb --unit postgresql
                 - systemctl start postgresql
                 - systemctl enable postgresql
